--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>专属音乐定制</title>
+<title>屿海专属音乐定制</title>
 <style>
     :root {
         --app-bg: #f5f5f7;
@@ -270,3 +270,4 @@
 
 </body>
 </html>
+
