--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <div class="container">
     <h1>🎵 专属音乐定制</h1>
-    <p class="subtitle">大间距版</p>
+    <p class="subtitle">专属于你们的故事</p>
 
     <div class="card">
         <div class="section-title">Step 1 · 风格选择</div>
@@ -270,4 +270,5 @@
 
 </body>
 </html>
+
 
