--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
     .label-text { font-size: 14px; font-weight: 600; margin-bottom: 10px; display: block; }
     .hint { font-size: 12px; color: #999; margin-bottom: 10px; display: block; font-weight: normal;}
 
-    /* --- 核心修改 --- */
+    /* --- 选项样式 (保持大间距) --- */
     .options-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 8px;  
-        /* 🔥 这里改成了 30px，非常宽的缝隙 */
         row-gap: 30px;    
-        margin-bottom: 15px; /* 底部也留出空间 */
+        margin-bottom: 15px; 
     }
     
     .radio-label {
@@ -88,7 +87,7 @@
         color: white;
         box-shadow: 0 4px 10px rgba(0, 122, 255, 0.3);
         font-weight: 600;
-        transform: translateY(-2px); /* 选中稍微上浮 */
+        transform: translateY(-2px); 
     }
 
     input[type="text"], textarea {
@@ -123,7 +122,7 @@
 
 <div class="container">
     <h1>🎵 专属音乐定制</h1>
-    <p class="subtitle">专属于你们的故事</p>
+    <p class="subtitle">让故事变成旋律</p>
 
     <div class="card">
         <div class="section-title">Step 1 · 风格选择</div>
@@ -207,8 +206,8 @@
         <div class="section-title">Step 2 · 故事填充</div>
         
         <div style="margin-bottom: 20px;">
-            <label class="label-text">4. 送给谁？</label>
-            <input type="text" id="target" placeholder="Ta的名字">
+            <label class="label-text">4. 送给谁？ <span style="font-weight:normal; color:#999; margin-left:5px;">(选填)</span></label>
+            <input type="text" id="target" placeholder="不填则默认在歌词里称呼为“你”">
         </div>
 
         <div style="margin-bottom: 20px;">
@@ -236,7 +235,8 @@
         var style = getVal('style');
         var mood = getVal('mood');
         var voice = getVal('voice');
-        var target = document.getElementById('target').value;
+        // 获取名字，如果为空，则不做处理，后面判断
+        var targetInput = document.getElementById('target').value.trim();
         var story = document.getElementById('story').value;
         var core_msg = document.getElementById('core_msg').value;
 
@@ -249,7 +249,10 @@
             return;
         }
 
-        var text = `【🎵 定制需求单】\n风格：${style}\n情绪：${mood}\n人声：${voice}\n----------------\n对象：${target}\n故事：${story}\n金句：${core_msg}`;
+        // 逻辑判断：如果没填名字，显示为“未指定”
+        var targetText = targetInput ? targetInput : "未指定 (默认用'你'或通用称呼)";
+
+        var text = `【🎵 定制需求单】\n风格：${style}\n情绪：${mood}\n人声：${voice}\n----------------\n对象：${targetText}\n故事：${story}\n金句：${core_msg}`;
 
         var textarea = document.createElement("textarea");
         textarea.value = text;
@@ -270,5 +273,3 @@
 
 </body>
 </html>
-
-
