--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
 
 <div class="container">
-    <h1>🎵 专属音乐定制</h1>
+    <h1>🎵屿海专属音乐定制</h1>
     <p class="subtitle">让故事变成旋律</p>
 
     <div class="card">
@@ -273,3 +273,4 @@
 
 </body>
 </html>
+
